# TauREx_public

./: .gitignore  .project  .pydevproject  README.md  README.txt  analyse_solutions_from_traces.py  atmfile_generator.py  auto_plot_post.py  bin_xsec.py  c_setup.py  clean_hist.sh  convert_xsec.py  create_cia_xsec.py  create_cluster_dict.py  create_flare_spectra.py  create_grid.py  create_spectrum.py  create_spectrum_chemprof.py  create_spectrum_grid.py  create_spectrum_venot.py  create_table.py  create_xsec.py  cython_setup.py  exonest.par  exonest.py  exonest_gj3470b.par  exonest_hotjupiter.par  exonest_minimal.par  exonest_minimal_gj3470.par  exonest_minimal_hotjupiter.par  generate_license.py  generate_plots.py  generate_spectra_lib.py  get_multinest_results.py  gui.py  gui.ui  license.txt  plot_chains.py  plot_grid.py  plot_retrieval_grid.py  (+13 more)
Documentation/: taurex_installation.docx
Input/: gj3470b_test.txt  gj3470b_test2.txt  gj3470b_test3.txt  h2_h2_1000K.cia  h2o_1500K.abs  profile.atm  testspec.txt
Original_codes/emission/smart/: DISORT.f  ErrPack2.f  R1MACH.f  add_flx.f  aer_tau.f  atmstr.f  flux_int.f  flx_ref.f  flx_src.f  fort.97  fresnel.f  grey_eq_trn.f  hd189_new_water.com  header.f  init_bin.f  init_interp.f  init_spect_io.f  int_rad_lev.f  layer_flx.f  layer_ref.f  map_rad.f  map_spect.f  norm_pi0_ph.f  param.inc  pd_out.f  perturb_rad.f  plkavg.f  rad_src.f  readmix.f  readpab.f  secnds.f  skip_wn.f  sm_eq_trn.f  smart_hdr.f  smart_in.f  smart_spectra  smart_spectra.f  solar.f  write_pd_flx.f
Original_codes/emission/smart_test/: D1MACH.f  add_rad.f  add_sflx.f  add_tflx.f  aerosol.f  albedo.f  bdrf.f  charsp.f  cldstr.f  cp_atm.f  delted.f  do_eq_trn.f  find_pd.f  find_units.f  fort.96  gas_tau.f  gasetau.f  gaslbltau.f  gasptau.f  gaus_int.f  grey_eq_tran_bdrf.f  heating.f  init_iu.f  init_pd_iu.f  interp_rad.f  interp_src.f  layer_trn.f  lepoly.f  load_optics.f  lpmom.f  make_smart_spectra  map_back.f  mod_atm.f  planck.f  planck_tst.f  qgausn.f  rad_out.f  rad_ref.f  rad_slit.f  rad_trn.f  (+14 more)
Original_codes/emission/smart_test/c_version/: BDREF.c  D1MACH.c  DISORT.c  ErrPack2.c  LINPAK2.c  R1MACH.c  add_flx.c  add_rad.c  add_sflx.c  add_tflx.c  aer_tau.c  aerosol.c  albedo.c  atmstr.c  bdrf.c  charsp.c  cldstr.c  cp_atm.c  delted.c  do_eq_trn.c  find_pd.c  find_units.c  flux_int.c  flx_ref.c  flx_src.c  fresnel.c  gas_tau.c  gasetau.c  gaslbltau.c  gasptau.c  gaus_int.c  grey_eq_tran_bdrf.c  grey_eq_trn.c  header.c  heating.c  init_bin.c  init_interp.c  init_iu.c  init_pd_iu.c  init_spect_io.c  (+47 more)
Original_codes/transmission/tau_v1.8/: tau
Original_codes/transmission/tau_v1.8/doc/: readme.txt
Original_codes/transmission/tau_v1.8/run/: h2o_1000K.abs  h2o_800K.abs
Original_codes/transmission/tau_v1.8/src/: functions.h  tau.cpp
Parfiles/: HD189733b.par  HD209458b.par  default.par  exonest.par  exonest_gj3470b.par  exonest_hd209458b.par  exonest_hd97658b.par  exonest_hotjupiter.par  exonest_minimal.par  exonest_minimal_gj3470.par  exonest_minimal_hotjupiter.par  exonest_minimal_hotjupiter_ariel.par  exonest_minimal_hotjupiter_emission.par  exonest_test.par  exonest_wasp12.par  taurex.par  taurex_emission_55cnc.par  taurex_emission_test.par  taurex_emission_wasp76.par  taurex_emission_wasp76_grid.par  taurex_hd209458b.par  taurex_hd209458b_angelos.par  taurex_hd97658b.par  taurex_hotjupiter.par  taurex_minimal.par  taurex_minimal_hotjupiter_emission.par  taurex_superearth.par  taurex_wasp12.par
Parfiles/ariel/: hotjupiter1_10.par  hotjupiter2_8.par  warmneptune1_10.par  warmneptune2_8.par
Profiling/: line_profiling.py
PyMultiNest/: pyapemost_demo.py  pymultinest_demo.py
PyMultiNest/MultiNest_v2.18/: Makefile  nested.F90
PyMultiNest/MultiNest_v2.18/example_ackley/: nestwrap.f90  params.f90
PyMultiNest/MultiNest_v2.18/example_eggbox_C/: eggbox.c
PyMultiNest/MultiNest_v2.18/example_eggbox_C++/: eggbox.cc  multinest.h
PyMultiNest/MultiNest_v2.18/example_gauss_shell/: params.f90
PyMultiNest/MultiNest_v2.18/example_gaussian/: main.f90  params.f90
PyMultiNest/MultiNest_v2.18/example_himmelblau/: params.f90
PyMultiNest/MultiNest_v2.18/example_obj_detect/: params.f90
PyMultiNest/MultiNest_v2.18/example_rosenbrock/: params.f90
PyMultiNest/multinest/: CMakeLists.txt  README
PyMultiNest/multinest/CMakeModules/: FindMultiNest.cmake
PyMultiNest/multinest/includes/: multinest.h
PyMultiNest/multinest/lib/: libmultinest.3.3.dylib  libmultinest.dylib  libmultinest_mpi.3.3.dylib  libmultinest_mpi.dylib
PyMultiNest/multinest/src/: CMakeLists.txt  cwrapper.f90  nested.F90  posterior.F90
PyMultiNest/multinest/src/example_ackley/: nestwrap.f90
PyMultiNest/multinest/src/example_eggbox_C/: CMakeLists.txt  eggbox.c
PyMultiNest/multinest/src/example_eggbox_C++/: eggbox.cc
PyMultiNest/multinest/src/example_gauss_shell/: params.f90
PyMultiNest/multinest/src/example_obj_detect/: params.f90
PyMultiNest/pyapemost/: analyse.py
PyMultiNest/pymultinest/: analyse.py  plot.py  run.py
classes/: __init__.py  atmosphere.py  base.py  cluster.py  data.py  emission.py  fitting.py  license.py  output.py  parameters.py  preselector.py  profile.py  taurex_emission.py  tp_profile.py  transmission.py
test-code/: convertwavenumbers.py
tests/: testmpi.py  testpymultinest.py
tests/test_0_emission/: test_fm.par  test_retrieval.par
tests/test_0_transmission/: test_fm.par  test_retrieval.par
tests/test_0_transmission_ACE/: test_fm.par
tools/: bin_ariel.py  bin_jwst.py  bin_spectrum.py  bin_xsec.py  convert_lightning2venot.py  convert_shota2taurex.py  convert_venot.py  convert_xsec.py  corner.py  create_cia_xsec.py  create_cluster_dict.py  create_spectrum_venot.py  create_xsec.py  plot_create_spectrum_instance.py  plot_hst_correlations.py  run_taurex_cobweb.sh  taurex_plots.py
tools/generate_xsec/: reinterpolate_xsec.py
tools/ktables/: collect_ktables.py  convert_ktables.py  generate_ktables.py
